Remove SecurityManager jvm Flag for Java25 (#131)
* Remove SecurityManager jvm Flag for Java25
* fix typo in userarchive.sh